# vimr

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  plan.md
src/: app.rs  browser.rs  commands.rs  hints.rs  history.rs  keyboard.rs  main.rs  mode.rs  statusbar.rs  tabs.rs
src/adblock/: manager.rs
src/config/: lua_engine.rs  mod.rs
