[package]
name = "vimr"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.11.1"
webkit6 = "0.6.1"
glib = "0.22"
gio = "0.22"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
adblock = "0.12"
ureq = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
